--- a/rust-libbpf/Dockerfile
+++ b/rust-libbpf/Dockerfile
@@ -9,10 +9,14 @@ COPY localbin/rust-libbpf /artifacts/localbin
 
 FROM debian:${DEBIAN_VERSION}-slim
 
+RUN apt update -y && apt install libelf-dev -y
+
 ARG TARGETPLATFORM
 
 COPY --from=builder /artifacts/localbin/rust-libbpf /usr/local/bin
 
 RUN chmod +x /usr/local/bin/rust-libbpf
+
+RUN LD_LIBRARY_PATH=/usr/local/lib
 
 ENTRYPOINT ["/usr/local/bin/rust-libbpf"]
